--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Chris Ogbodo Portfolio</title>
+    <title>Chris Sampson Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
